--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="logo">
                
                <img class="logo-pg" src="./assets/fg.svg" alt="logo">
+               <img class="logo-photo" src="./assets/Photo-Gallery.svg" alt="">
                 <ion-icon class="icon-search-hide" name="search-outline"></ion-icon> 
             </div>
             
