separação de funções

--- a/index.html
+++ b/index.html
@@ -92,31 +92,9 @@
         </section>
         
         <article>
-            <figure>
-                <img src="https://source.unsplash.com/random?a=1" alt="">
-            </figure>
-            <figure>
-                <img src="https://source.unsplash.com/random?a=2" alt="">
-            </figure>
-            <figure>
-                <img src="https://source.unsplash.com/random?a=3" alt="">
-            </figure>
-            <figure>
-                <img src="https://source.unsplash.com/random?a=4" alt="">
-            </figure>
-            <figure>
-                <img src="https://source.unsplash.com/random?a=5" alt="">
-            </figure>
-            <figure>
-                <img src="https://source.unsplash.com/random?a=6" alt="">
-            </figure>
-            <figure>
-                <img src="https://source.unsplash.com/random?a=7" alt="">
-            </figure>
-            <figure>
-                <img src="https://source.unsplash.com/random?a=8" alt="">
-            </figure>
+            
         </article>
+        <button>Descubra mais</button>
     </main>
     <footer>
         <img src="./assets/Photo-Gallery-dark.svg" alt="">
@@ -138,6 +116,6 @@
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
